--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   
 	<div id="footer">
 		<a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>  ●  <a href="http://twitter.com/crotchetnet/">Twitter</a>  ●  <a href="/about/">About</a>  ●  <a href="/contact/">Contact</a>  ●  <a href="/archive/">Archive</a>
-		<div id="copyright"><p>© 2015 Crotchet.net ♪</p></div>
+		<div id="copyright"><p>© 2015 Crotchet1.net ♪</p></div>
 	</div>
   
     </div>
