--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
   
 	<div id="footer">
-		<a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a>  ●  <a href="http://twitter.com/crotchetnet/">Twitter</a>  ●  <a href="/about/">About</a>  ●  <a href="/contact/">Contact</a>  ●  <a href="/archive/">Archive</a>
+		<a href="{{ "/feed/" | prepend: site.baseurl }}">RSS</a>  ●  <a href="http://twitter.com/crotchetnet/">Twitter</a>  ●  <a href="/about/">About</a>  ●  <a href="/contact/">Contact</a>  ●  <a href="/archive/">Archive</a>
 		<div id="copyright"><p>© 2015 Crotchet.net ♪</p></div>
 	</div>
   
