--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -318,7 +318,8 @@ hr {
   margin-bottom: 0.5rem; }
 
 .sharing-button.twitter {
-  background-color: #00aced; }
+  background-color: #00aced;
+  color: #fff; }
 
 .sharing-button.twitter:hover {
   background-color: #009bd4; }
