--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -319,7 +319,9 @@ hr {
 
 .sharing-button.twitter {
   background-color: #00aced;
-  color: #fff; }
+  color: #fff; 
+  text-decoration: none; 
+ }
 
 .sharing-button.twitter:hover {
   background-color: #009bd4; }
