--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -303,6 +303,8 @@ hr {
     }
 }
 
+/**
+
 .sharing {
   margin: 1rem 0;
   text-align: center; }
@@ -360,3 +362,5 @@ hr {
   color: #fff; 
   text-decoration: none;  
  }
+ 
+ */
