--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -190,6 +190,11 @@
 .post-link {
     display: block;
     font-size: 24px;
+}
+
+.external-post-link {
+    display: block;
+    font-size: 24px;
 	background-color: red;
 }
 
