--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,8 @@
 
     <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} ♪</a></div>
 
+	<div class="nav-bar">
+	
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -22,6 +24,8 @@
       </div>
     </nav>
 
+  </div>
+  
   </div>
 
 </header>
