--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -25,19 +25,10 @@
 
 .nav-bar {
   border: none;
-  background: #76c261;
-	-webkit-animation:cyclecolors linear infinite;
-	-webkit-animation-duration: 90s;
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	-o-animation-iteration-count: infinite;
+  background: #add8e6;
   color: #fff;
-  letter-spacing: .1em;
   list-style: none;
-/*   margin: 0 auto; */
   width: 100%;
-/*   padding: 0; */
-  text-transform: uppercase;
   text-align: center;
 }
 
