--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,7 +14,7 @@
     font-size: 52px;
     line-height: 56px;
     letter-spacing: -1px;
-    margin-bottom: 0;
+    margin-bottom: 10;
 	text-align: center;
 
     &,
@@ -204,11 +204,11 @@
 .external-post-link {
     display: block;
     font-size: 24px;
-	color: red;
+	color: #add8e6;
 }
 
 a.external-post-link:visited {
-	color: red;
+	color: #add8e6;
 }
 
 
