--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,7 +14,8 @@
     font-size: 52px;
     line-height: 56px;
     letter-spacing: -1px;
-    margin-bottom: 10;
+    margin-bottom: 0;
+	padding-bottom: 10;
 	text-align: center;
 
     &,
