--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
-	padding-bottom: 10;
+	padding-bottom: 10px;
 	text-align: center;
 
     &,
