--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,7 +26,7 @@
 
 .nav-bar {
   border: none;
-  background: #add8e6;
+  background: #00a8e8;
   color: #fff;
   list-style: none;
   width: 100%;
