--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -205,11 +205,11 @@
 .external-post-link {
     display: block;
     font-size: 24px;
-	color: #add8e6;
+	color: #007ea7;
 }
 
 a.external-post-link:visited {
-	color: #add8e6;
+	color: #007ea7;
 }
 
 
