--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -195,13 +195,13 @@
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
-	align: center;
+	text-align: center;
 }
 
 .post-link {
     display: block;
     font-size: 24px;
-	align: center;
+	text-align: center;
 }
 
 .external-post-link {
