--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -213,6 +213,12 @@ a.external-post-link:visited {
 	color: #007ea7;
 }
 
+blockquote {
+	font-size: 13px;
+	background-color: #f0f0f0;
+	margin: 0 auto;
+	padding: 2px 28px;
+}
 
 
 /**
