--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -214,9 +214,8 @@ a.external-post-link:visited {
 }
 
 blockquote {
+	font-size: 15px;
 	background-color: #f0f0f0;
-	margin: 0 auto;
-	padding: 2px 28px;
 }
 
 
