--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -215,7 +215,7 @@ a.external-post-link:visited {
 blockquote {
 	font-size: 16px;
 	background-color: #f0f0f0;
-	margin: 2 auto;
+	margin: 2px auto;
 }
 
 
