--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -397,9 +397,14 @@ hr {
 	width:25%;
 	float:left;
  }
+ 
+ .sidebar h3 {
+	transform: uppercase;
+ }
 
  .sidebar ul{
 	list-style:none;
 	padding:0;
 	margin:0;
+	margin-bottom:10;
 }
