--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 
 
-    <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} ♪</a></div>
+    <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} - ♪</a></div>
 	
     <nav class="site-nav">
       <a href="#" class="menu-icon">
