--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
 
-
-
     <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} - ♪</a></div>
+	
+	TESTING THIS!!
 	
     <nav class="site-nav">
       <a href="#" class="menu-icon">
