--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header class="site-header">
 
-    <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} - ♪</a></div>
+    <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} ♪</a></div>
 	
-	<b>Testing!</b>
 	
     <nav class="site-nav">
       <a href="#" class="menu-icon">
