--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -18,6 +18,10 @@
     margin-bottom: 0;
 	padding-bottom: 10px;
 	text-align: center;
+	padding:30px 0 23px 0;
+width:90%;
+max-width:1000px;
+margin:0 auto;
 
     &,
     &:visited {
