--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-    <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }} ♪</a></div>
+    <div class="site-title"><a class="site-title" href="{{ site.baseurl }}/">♪ {{ site.title }}</a></div>
 	
 	
     <nav class="site-nav">
@@ -12,14 +12,7 @@
         </svg>
       </a>
 
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
+
 
  
   
