--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@ layout: null
 
 
 // Our variables
-$base-font-family: "Roboto", sans-serif; 
+$base-font-family: "Open Sans", sans-serif; 
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
