--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -216,8 +216,9 @@ margin:0 auto;
 
 .external-post-link {
     display: block;
-    font-size: 24px;
-	color: #007ea7;
+    font-size: 30px;
+	color: #fff;
+	font-weight: bold;
 }
 
 a.external-post-link:visited {
@@ -412,6 +413,7 @@ hr {
  
  .sidebar h3 {
 	text-transform: uppercase;
+	font-weight: bold;
  }
 
  .sidebar ul{
