--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -217,7 +217,7 @@ margin:0 auto;
 .external-post-link {
     display: block;
     font-size: 30px;
-	color: #fff;
+	color: #000000;
 	font-weight: bold;
 }
 
