--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -399,7 +399,16 @@ hr {
   text-decoration: none;  
  }
  
-
+@include media-query($on-palm) { .sharing-button, .sharing-button:visited {
+  display: inline-block;
+  text-align: center;
+  width: 5.5rem;
+  min-width: 10rem;
+  background-color: #ccc;
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.5rem; }
+  }
  
  .home {
 	width:70%;
