--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -358,6 +358,7 @@ hr {
   @include media-query($on-palm) {
          width: 5.5rem;
          max-width: 6rem;
+         font-weight:bold;
   }
 
 .sharing-button.twitter {
