--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -359,6 +359,7 @@ hr {
          width: 2.5rem;
          max-width: 3rem;
          font-weight:bold; 
+         border: 1px solid blue; 
          }
   }
 
