--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -357,7 +357,7 @@ hr {
   
   @include media-query($on-palm) {
          width: 2.5rem;
-         min-width: 7rem;
+         min-width: 6em;
          font-weight:bold; 
          }
   }
