--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -358,7 +358,7 @@ hr {
   @include media-query($on-palm) {
          width: 2.5rem;
          min-width: 5em;
-         font-weight:bold; 
+         padding: 5px;
          }
   }
 
