--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -430,6 +430,8 @@ hr {
 	margin-bottom:10;
 }
 
+ul{padding:0 0 0 1em}
+
 ul.write{
 list-style:none;
 }
@@ -440,7 +442,6 @@ content:'\270d'
 
 ul.heart{
 list-style:none;
-padding-left:5px;
 }
 
 ul.heart li:before{
