--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -432,7 +432,7 @@ hr {
 
 h1,h2,h3{margin:0 0 .5em}
 
-h1{font-size:1.6em;line-height:1.4}
+h1{font-weight:bold;font-size:1.6em;line-height:1.4}
 
 ol,p,ul{margin:0 0 1.6em 0}
 
@@ -464,6 +464,4 @@ ul.heart li {
 text-indent: -10px;
 }
 
-h1 {
-font-weight:bold;
-}
+
