--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -434,6 +434,8 @@ h1,h2,h3{margin:0 0 .5em}
 
 h1{font-weight:bold;font-size:1.6em;line-height:1.4}
 
+h2{font-weight:bold}
+
 ol,p,ul{margin:0 0 1.6em 0}
 
 ol,ul{padding:0 0 0 1em}
@@ -463,5 +465,3 @@ content:'\2764'
 ul.heart li {
 text-indent: -10px;
 }
-
-
