--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -434,7 +434,7 @@ h1,h2,h3{margin:0 0 .5em}
 
 h1{font-weight:bold;font-size:1.6em;line-height:1.4}
 
-h2{font-weight:bold}
+h2, h3{font-weight:bold}
 
 ol,p,ul{margin:0 0 1.6em 0}
 
