--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -469,3 +469,24 @@ text-indent: -10px;
 .center {
     text-align: center;
 }
+
+.breadcrumb {
+list-style:none;
+display:inline-block;
+margin:0;
+padding:0
+}
+
+.breadcrumb li {
+float:left;
+margin:0
+}
+
+.breadcrumb li::after {
+content:"â€º ";
+white-space:pre
+}
+
+.breadcrumb li:last-child:after {
+content:""
+}
