--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -436,6 +436,8 @@ h1{font-weight:bold;font-size:1.6em;line-height:1.4}
 
 h2, h3{font-weight:bold}
 
+
+
 ol,p,ul{margin:0 0 1.6em 0}
 
 ol,ul{padding:0 0 0 1em}
@@ -473,6 +475,7 @@ text-indent: -10px;
 .breadcrumb {
 list-style:none;
 display:inline-block;
+font-size:14px;
 margin:0;
 padding:0
 }
