--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -476,7 +476,7 @@ text-indent: -10px;
 list-style:none;
 display:inline-block;
 margin-bottom:20;
-padding:0
+padding-left:2
 }
 
 .breadcrumb li {
