--- a/_includes/get-well-header.html
+++ b/_includes/get-well-header.html
@@ -1,1 +1,14 @@
+<body itemscope="" itemtype="https://schema.org/WebPage">
+  <a href="/" class="logo"><img src="/img/IMG_7208.PNG" alt="Get Well Messages"></a>
 
+<div class="wrapper">
+          <h1>Get Well Wishes</h1>
+      <div class="sharing">
+
+  <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text=Test Post!&amp;url=http://www.crotchet.net/test-post/&amp;via=crotchetnet&amp;related=crotchetnet" rel="nofollow" title="Share on Twitter">Twitter</a>
+
+  <a class="sharing-button facebook" href="https://facebook.com/sharer.php?u=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
+
+  <a class="sharing-button googleplus" href="https://plus.google.com/share?url=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
+
+</div>
