--- a/_includes/get-well-footer.html
+++ b/_includes/get-well-footer.html
@@ -1,1 +1,24 @@
 
+<footer class="site-footer">
+
+<ol class="breadcrumb" itemscope="" itemtype="http://schema.org/BreadcrumbList">  
+  
+<li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">  
+                              <a itemprop="item" href="/"><span itemprop="name">Get Well Messages</span></a><meta itemprop="position" content="1">
+  </li>
+  
+                          <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+                            <a itemprop="item" href="{page.url}"><span itemprop="name">{page.title2}</span></a><meta itemprop="position" content="2">
+</li>      
+
+</ol>    
+  
+<div id="footer">
+
+<a href="/about/">About</a>  |  <a href="/contact/">Contact</a>  | <a href="/privacy/">Privacy Policy</a> 
+
+      <div id="copyright"><p>© 2018 getwellmessages.net </p></div>
+
+</div>
+
+</footer>
