--- a/_includes/get-well-footer.html
+++ b/_includes/get-well-footer.html
@@ -8,7 +8,7 @@
   </li>
   
                           <li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
-                            <a itemprop="item" href="{page.permalink}"><span itemprop="name">{{page.title2}}</span></a><meta itemprop="position" content="2">
+                            <a itemprop="item" href="{{page.permalink}}"><span itemprop="name">{{page.title2}}</span></a><meta itemprop="position" content="2">
 </li>      
 
 </ol>    
