--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -34,12 +34,7 @@
   <meta property="article:tag" content="{{ tag }}">
   {% endfor %}
   {% endif %}
-  {% if author %}
-  <meta property="article:author" content="{{ author.name }}" />
-  {% endif %}  
+  <meta property="article:author" content="getwellmessages.net" />
   
-  
-  
- 
   <!-- <script type="text/javascript" src="https://d31vxm9ubutrmw.cloudfront.net/static/js/2055.js"></script> -->
 <link rel="preload" href="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net" as="script"><script src="https://pagead2.googlesyndication.com/pagead/js/r20180822/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7704978023988513.js"></script><script type="text/javascript" src="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net" as="script"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net"></script></head>
