--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -12,10 +12,8 @@
   
   
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
   <meta property="og:site_name" content="{{ site.title }}">
-  {% if page.title %}
-  <meta property="og:title" content="{{ page.title }}">
+  {% if page.title %}<meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="article">
   <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
   {% else %}
