--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -11,28 +11,44 @@
   <link rel="preconnect" href="//pagead2.googlesyndication.com">
   
   
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta property="og:site_name" content="{{ site.title }}">
-  {% if page.title %}<meta property="og:title" content="{{ page.title }}">
-  <meta property="og:type" content="article">
-  <meta property="og:description" content="{{ page.excerpt | strip_html }}"/>
-  {% else %}
-  <meta property="og:title" content="{{ site.title }}">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="{{ site.description }}">
-  {% endif %}
-  {% if page.date %}
-  <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
-  <meta property="article:author" content="{{ site.url }}/about/">
-  {% endif %}
-  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-  {% if page.tags %}
-  <meta itemprop="keywords" content="{{ page.tags | join: ',' }}" />
-  {% for tag in page.tags %}
-  <meta property="article:tag" content="{{ tag }}">
+  <meta content="{{ site.title }}" property="og:site_name">
+{% if page.title %}
+  <meta content="{{ page.title }}" property="og:title">
+{% else %}
+  <meta content="{{ site.title }}" property="og:title">
+{% endif %}
+{% if page.title %}
+  <meta content="article" property="og:type">
+{% else %}
+  <meta content="website" property="og:type">
+{% endif %}
+{% if page.description %}
+  <meta content="{{ page.description }}" property="og:description">
+{% else %}
+  <meta content="{{ site.description }}" property="og:description">
+{% endif %}
+{% if page.url %}
+  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+{% endif %}
+{% if page.date %}
+  <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
+  <meta content="{{ site.url }}/about/" property="article:author">
+{% endif %}
+{% if page.image %}
+  <meta content="/img/srcset/{{ page.image }}" property="og:image">
+{% else %}
+  <meta content="/img/logo-high-resolution.png" property="og:image">
+{% endif %}
+{% if page.categories %}
+  {% for category in page.categories limit:1 %}
+  <meta content="{{ category }}" property="article:section">
   {% endfor %}
-  {% endif %}
-  <meta property="article:author" content="getwellmessages.net" />
+{% endif %}
+{% if page.tags %}
+  {% for tag in page.tags %}
+  <meta content="{{ tag }}" property="article:tag">
+  {% endfor %}
+{% endif %}
   
   <!-- <script type="text/javascript" src="https://d31vxm9ubutrmw.cloudfront.net/static/js/2055.js"></script> -->
 <link rel="preload" href="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net" as="script"><script src="https://pagead2.googlesyndication.com/pagead/js/r20180822/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7704978023988513.js"></script><script type="text/javascript" src="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net" as="script"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net"></script></head>
