--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -10,45 +10,71 @@
   <link rel="preconnect" href="//www.google-analytics.com/">
   <link rel="preconnect" href="//pagead2.googlesyndication.com">
   
-  
-  <meta content="{{ site.title }}" property="og:site_name">
-{% if page.title %}
-  <meta content="{{ page.title }}" property="og:title">
-{% else %}
-  <meta content="{{ site.title }}" property="og:title">
-{% endif %}
-{% if page.title %}
-  <meta content="article" property="og:type">
-{% else %}
-  <meta content="website" property="og:type">
-{% endif %}
-{% if page.description %}
-  <meta content="{{ page.description }}" property="og:description">
-{% else %}
-  <meta content="{{ site.description }}" property="og:description">
-{% endif %}
-{% if page.url %}
-  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
-{% endif %}
-{% if page.date %}
-  <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-  <meta content="{{ site.url }}/about/" property="article:author">
-{% endif %}
-{% if page.image %}
-  <meta content="/img/{{ page.image }}" property="og:image">
-{% else %}
-  <meta content="/img/logo-high-resolution.png" property="og:image">
-{% endif %}
-{% if page.categories %}
-  {% for category in page.categories limit:1 %}
-  <meta content="{{ category }}" property="article:section">
-  {% endfor %}
-{% endif %}
-{% if page.tags %}
-  {% for tag in page.tags %}
-  <meta content="{{ tag }}" property="article:tag">
-  {% endfor %}
-{% endif %}
-  
+ 
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <meta name="author" content="getwellmessages.net" />
+
+  <meta property="og:title" content="{% if page.title %}{{ page.title | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.title }}{% endif %}">
+  <meta property="og:site_name" content="{{ site.title }}" />
+  <meta property="og:description" content="{% if page.description %}{{ page.desctiption | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:locale" content="en_US" />
+  <meta name="twitter:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+
+  {% if page.title %}
+  	<!-- Article specific OG data -->
+  	<meta property="og:type" content="article" />
+  	<meta property="article:published_time" content="{{page.date}}" />
+  	{% if page.modified %}
+  		<meta property="article:modified_time" content="{{page.modified}}" />
+  	{% endif %}
+  	<meta property="article:author" content="http://facebook.com/aramzs" />
+    <meta property="article:publisher" content="https://www.facebook.com/aramzs" />
+  	<meta property="article:section" content="{{page.vertical}}" />
+  	{% for tag in page.categories %}
+  		<meta property="article:tag" content="{{tag}}" />
+  	{% endfor %}
+	<meta name="keywords" content="{{page.tags | join: ', '}}" />
+
+  	<meta name="twitter:card" content="summary_large_image" />
+  	<meta name="twitter:creator" content="@chronotope" />
+  	<meta name="twitter:title" content="{{page.title}}" />
+	{% if page.ogimagenull %}
+		<!-- no og image -->
+	{% elsif page.ogimage %}
+		<meta property="og:image" content="{{page.ogimage}}" />
+	  	<meta name="twitter:image" content="{{page.ogimage}}" />
+	  	<meta property="og:image:width" content="600" />
+	  	<meta property="og:image:height" content="315" />
+	{% elsif page.image %}
+	  	<meta property="og:image" content="{{page.image}}" />
+	  	<meta name="twitter:image" content="{{page.image}}" />
+  	{% else %}
+  		<meta property="og:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
+  		<meta name="twitter:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
+  	{% endif %}
+	
+	{% if page.jsonld %}
+		{% include {{page.jsonld}}.html %}
+	{% else %}
+		{% include postJSONLD.html %}
+	{% endif %}
+
+  {% else %}
+  	<!-- OG data for homepage -->
+  	<meta property="og:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
+  	<meta property="og:type" content="website" />
+  	<meta name="twitter:card" content="summary" />
+  	<meta name="twitter:title" content="{{site.title}}" />
+  	<meta name="twitter:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
+	{% include homeJSONLD.html %}
+  {% endif %}
+   
   <!-- <script type="text/javascript" src="https://d31vxm9ubutrmw.cloudfront.net/static/js/2055.js"></script> -->
 <link rel="preload" href="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net" as="script"><script src="https://pagead2.googlesyndication.com/pagead/js/r20180822/r20180604/osd.js"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-7704978023988513.js"></script><script type="text/javascript" src="https://adservice.google.co.uk/adsid/integrator.js?domain=getwellmessages.net"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net" as="script"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=getwellmessages.net"></script></head>
