--- a/_includes/get-well-footer.html
+++ b/_includes/get-well-footer.html
@@ -1,3 +1,10 @@
+<h3>Get Well Resources</h3>  
+  
+<ul class="bottom-nav">
+  <li><a href="/">Get Well FAQ: Guide to Writing a Get Well Message</a></li>  
+  <li><a href="/">Get Well Gifts</a></li>
+  <li><a href="/">Get Well Soon Prayers</a></li>  
+</ul>
 
 <footer class="site-footer">
 
