--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,22 @@
 layout: default
 published: true
 ---
- {{ content }}
+<!DOCTYPE html>
+<html>
 
-{% include resources-nav.html %}
+  {% include get-well-head.html %}
+
+  <body>
+
+    {% include get-well-header.html %}
+
+      
+        {{ content }}
+      
+    {% include resources-nav.html %}
+
+    {% include get-well-home-footer.html %}
+
+  </body>
+
+</html>
