--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@ published: true
       
     {% include resources-nav.html %}
 
-    {% include get-well-home-footer.html %}
+    {% include get-well-footer.html %}
 
   </body>
 
