--- a/_includes/get-well-home-footer.html
+++ b/_includes/get-well-home-footer.html
@@ -1,1 +1,12 @@
+<footer class="site-footer">
+  
+<div id="footer">
+
+<a href="/about/">About</a>  |  <a href="/contact/">Contact</a>  | <a href="/privacy/">Privacy Policy</a> 
+
+      <div id="copyright"><p>© 2018 getwellmessages.net </p></div>
+
+</div>
+
+</footer>
 
