--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         {{ content }}
       
 
-    {% include get-well-home-footer.html %}
+    {% include get-well-footer.html %}
 
   </body>
 
