--- a/_includes/get-well-header.html
+++ b/_includes/get-well-header.html
@@ -1,8 +1,12 @@
 <body itemscope="" itemtype="https://schema.org/WebPage">
   <a href="/" class="logo"><img src="/img/IMG_7208.PNG" alt="Get Well Messages"></a>
 
+ {% if page.layout == 'page' %} 
+  
 <div class="wrapper">
           <h1>{% if page.title2 %}{{ page.title2 }}  {% else %}{{ page.title }}{% endif %}</h1>
+  
+  
       <div class="sharing">
 
   <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text=Test Post!&amp;url=http://www.crotchet.net/test-post/&amp;via=crotchetnet&amp;related=crotchetnet" rel="nofollow" title="Share on Twitter">Twitter</a>
@@ -12,3 +16,6 @@
   <a class="sharing-button googleplus" href="https://plus.google.com/share?url=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
 
 </div>
+  
+{% endif %} 
+  
