--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -510,6 +510,10 @@ display:inline-block;
 }
 
 .col {
-  width: 50%;
+  width: 25%;
   display: inline-block;
+}
+
+.index-titles {
+font-size:10px;
 }
