--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -430,6 +430,12 @@ hr {
 	margin-bottom:10;
 }
 
+img {
+  width: auto ;
+  max-width: 100% ;
+  height: auto ;
+}
+
 h1,h2,h3{margin:0 0 .5em}
 
 h1{font-weight:bold;font-size:1.6em;line-height:1.4}
