--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -430,7 +430,13 @@ hr {
 	margin-bottom:10;
 }
 
-.img{display:block;max-width:100%;margin:0 0 2rem 0}@media (min-width:45rem)}
+.img {
+display:block;
+max-width:100%;
+margin:0 0 2rem 0
+}
+@media (min-width:45rem)
+}
 
 h1,h2,h3{margin:0 0 .5em}
 
