--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -435,8 +435,7 @@ display:block;
 max-width:100%;
 margin:0 0 2rem 0
 }
-@media (min-width:45rem)
-}
+@media (min-width:45rem) {
 
 h1,h2,h3{margin:0 0 .5em}
 
