--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -519,7 +519,8 @@ width: 208px
 .img1 {
 width: 80%; 
 margin-left: auto; 
-margin-right: auto
+margin-right: auto;
+margin-bottom: 2;
 } 
 .contentTop {
 width: auto
