--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -520,7 +520,7 @@ width: 208px
 width: 80%; 
 margin-left: auto; 
 margin-right: auto;
-margin-bottom: 2;
+margin-bottom: 2rem;
 } 
 .contentTop {
 width: auto
