--- a/_includes/get-well-header.html
+++ b/_includes/get-well-header.html
@@ -10,7 +10,7 @@
         
   <a class="sharing-button twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" title="Share on Twitter">Twitter</a>
 
-  <a class="sharing-button facebook" href="https://facebook.com/sharer.php?u=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
+  <a class="sharing-button facebook" href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
 
   <a class="sharing-button googleplus" href="https://plus.google.com/share?url=http://www.crotchet.net/test-post/" rel="nofollow" target="_blank" title="Share on Google Plus">Google+</a>
 
