--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -356,7 +356,7 @@ hr {
   margin-bottom: 0.5rem;
   border-radius:25px;
   
-  @media only screen and (min-width: 320px) {
+  @media (min-width: 320px) {
     float: right;
     }
 }
