--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -356,10 +356,12 @@ hr {
   margin-bottom: 0.5rem;
   border-radius:25px;
   
-  @media (max-width: 320px) {
-    float: right;
-    padding-left:40px;
+  @media all and  (min-width: 800px) {
+
+    .share {
+        float:right;
     }
+
 }
   
   @include media-query($on-palm) {
