--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -360,7 +360,7 @@ hr {
          width: 2.5rem;
          min-width: 5em;
          padding: 5px;
-         float: right;
+         padding-left:20px;
          }
   }
 
