--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -343,7 +343,7 @@ hr {
 
 .sharing {
   margin: 1rem 0;
-  text-align: center; }
+  text-align: center; 
 
   @include media-query($on-palm) {
         float:right;
