--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -346,7 +346,7 @@ hr {
   text-align: center; 
 
   @include media-query($on-palm) {
-        float:right;
+        padding-left:20px;
          }
   }
 
