--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -346,7 +346,7 @@ hr {
   text-align: center; 
 
   @include media-query($on-palm) {
-        padding-left:20px;
+        margin-left:5px;
          }
   }
 
@@ -359,7 +359,7 @@ hr {
   color: #fff;
   text-decoration: none;
   margin-bottom: 0.5rem;
-  border-radius:25px;
+  border-radius:15px;
   
   @include media-query($on-palm) {
          width: 2.5rem;
