--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -346,7 +346,8 @@ hr {
   text-align: center; 
 
   @include media-query($on-palm) {
-        margin-left:5px;
+        display:block;
+        overflow:hidden;
          }
   }
 
