--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -348,6 +348,7 @@ hr {
   @include media-query($on-palm) {
         display:block;
         overflow:hidden;
+        float:right;
          }
   }
 
