--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -344,14 +344,12 @@ hr {
 .sharing {
   margin: 1rem 0;
   text-align: center; }
-/**
+
   @include media-query($on-palm) {
-        display:block;
-        overflow:hidden;
-        float:right;
+        text-align:right;
          }
   }
-**/
+
 .sharing-button, .sharing-button:visited {
   display: inline-block;
   text-align: center;
