--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
         </svg>
       </a>
       <div class="trigger">
-      <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+      <a class="page-link" href="/">Home</a>
       </div>
   </nav>
 
