--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,9 @@
         </svg>
       </a>
       <div class="trigger">
-      <a class="page-link" href="/">Home</a>
+     <ul>
+       <li><a class="page-link" href="/">Home</a></li>
+    </ul>
       </div>
   </nav>
 
