--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,7 @@
         </svg>
       </a>
       <div class="trigger">
-     <ul>
-       <li><a class="page-link" href="/">Home</a></li>
-    </ul>
+     <a class="page-link" href="/">Home</a>
       </div>
   </nav>
 
