--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -517,17 +517,10 @@ content:" ►";
 font-size:10px;
 }
 
-.contentTop {
-margin-left: auto; 
-margin-right: auto; 
-width: 208px
-} @media (max-width: 1010px) { 
-.img1 {
-width: 80%; 
-margin-left: auto; 
-margin-right: auto;
-margin-bottom: 2rem;
-} 
-.contentTop {
-width: auto
-} }
+.col{
+display:block;
+margin-left:0;
+max-width:100%;
+min-width:0;
+width:100%
+}
