--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -524,3 +524,4 @@ max-width:100%;
 min-width:0;
 width:100%
 }
+@media (min-width:880px){.row{flex-direction:row;margin-left:-1rem;width:calc(100% + 2rem)}.row .col{flex:1;width:0;margin-bottom:inherit;padding:0 1rem}}
