--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -517,11 +517,10 @@ content:" ►";
 font-size:10px;
 }
 
-.col{
-display:block;
-margin-left:0;
-max-width:100%;
-min-width:0;
-width:100%
+.row {
+    display: flex;
 }
-@media (min-width:880px){.row{flex-direction:row;margin-left:-1rem;width:calc(100% + 2rem)}.row .col{flex:1;width:0;margin-bottom:inherit;padding:0 1rem}}
+
+.column {
+    flex: 50%;
+}
