--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -526,3 +526,9 @@ font-size:10px;
     padding: 5px;
     margin: 0 auto;
 }
+
+media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+}
