--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -527,7 +527,7 @@ font-size:10px;
     margin: 0 auto;
 }
 
-media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .column {
         width: 100%;
     }
