--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -517,8 +517,10 @@ content:" ►";
 font-size:10px;
 }
 
-.row {
-    display: flex;
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .column {
