--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -517,21 +517,23 @@ content:" ►";
 font-size:10px;
 }
 
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
 .column {
     float: left;
     width: 50%;
-    padding: 5px;
-    margin: 0 auto;
 }
 
+.row:after {
+    content:"";
+    display: table;
+    clear: both;
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
 @media screen and (max-width: 480px) {
     .column {
-        width: 100%;
+        float: none;
+        width: auto;
     }
 }
