--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -520,6 +520,7 @@ font-size:10px;
 .column {
     float: left;
     width: 50%;
+    padding:5px;
 }
 
 .row:after {
@@ -531,7 +532,7 @@ img {
     max-width: 100%;
     height: auto;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 680px) {
     .column {
         float: none;
         width: auto;
