--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -519,8 +519,8 @@ font-size:10px;
 
 .column {
     float: left;
-    width: 25%;
-    margin: 0 5px 0 5px;
+    width: 50%;
+    margin: 0px 5px 0px 5px;
 }
 
 .row:after {
