--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -520,7 +520,7 @@ font-size:10px;
 .column {
     float: left;
     width: 50%;
-    margin: 0px 5px 0px 5px;
+    margin-right: 5px;
 }
 
 .row:after {
