--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -520,8 +520,9 @@ font-size:10px;
 .column {
     float: left;
     width: 50%;
-    padding-right:10px;
-    padding-left:10px;
+    border-style:solid;
+    margin: 5px;
+    padding: 5px;  
 }
 
 .row:after {
