--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -519,7 +519,7 @@ font-size:10px;
 
 .column {
     float: left;
-    width: 30%;
+    width: 100px;
     border-style:solid;
     margin: 5px;
     padding: 5px;  
