--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -435,12 +435,12 @@ hr {
 	margin:0;
 	margin-bottom:10;
 }
-
+/**
 .img {
 display-inline:block;
 margin:0 2rem 2rem 0
 }
-
+**/
 h1,h2,h3{margin:0 0 .5em}
 
 h1{font-weight:bold;font-size:1.6em;line-height:1.4}
