--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -518,7 +518,7 @@ font-size:10px;
 
 .column {
     float: left;
-    width: 100%;
+    width: 500px;
     border-style:solid;
     margin: 5px;
     padding: 5px;  
