--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -543,6 +543,7 @@ background-color: #fff;
 width: 100%; 
 margin: 6px auto; padding: 2px;
 text-align: center;
+border-style:dotted;
 }
 
 .jumbo img {
