--- a/css/main.scss
+++ b/css/main.scss
@@ -4,10 +4,8 @@ published: true
 ---
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$base-font-family: 'Montserrat', sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
