--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@ published: true
 @charset "utf-8";
 
 // Our variables
-$base-font-family: 'Montserrat', sans-serif;
+$base-font-family: 'Open Sans', sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
