--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -4,7 +4,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="/css/main.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="/css/fonts.css" rel="stylesheet" type="text/css">
   <link rel="manifest" href="/manifest.json">
   <link rel="dns-prefetch" href="//www.google-analytics.com">
   <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
