--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@ published: true
 @charset "utf-8";
 
 // Our variables
-$base-font-family: font-family: 'Gotham SSm A', 'Gotham SSm B'
+$base-font-family: 'Gotham SSm A', 'Gotham SSm B'
 $base-font-size:   18px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
