--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -564,3 +564,8 @@ display: inline;
   margin-bottom: 5px;
   border-radius:5px;
 }
+
+.poem-title {
+   font-weight:bold;
+   text-align:center;
+}
