--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -344,6 +344,7 @@ hr {
 .sharing {
   margin: 1rem 0;
   text-align: right; 
+  padding:2px;
 
   @media only screen and (max-width: 320px) {
         text-align:center;
