--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -561,8 +561,8 @@ display: inline;
 
 .poems {
   Background: #ADD8E6;
-  Padding:10px;
-  margin-bottom: 5px;
+  Padding:10px 0;
+  margin-bottom: 20px;
   border-radius:5px;
   text-align:center;
 }
