--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -561,7 +561,7 @@ display: inline;
 
 .poems {
   Background: #ADD8E6;
-  Padding:10px 0;
+  Padding:10px 10px 10px 10px;
   margin-bottom: 20px;
   border-radius:5px;
   text-align:center;
