--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -560,8 +560,9 @@ display: inline;
 }
 
 .poems {
-  Background: #ADD8E6;
-  Padding:10px 10px 10px 10px;
+  background: #ADD8E6;
+  padding-right: 10px;
+  padding-left: 10px;
   margin-bottom: 20px;
   border-radius:5px;
   text-align:center;
