--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -561,8 +561,7 @@ display: inline;
 
 .poems {
   background: #ADD8E6;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 20px 20px 20px 20px;
   margin-bottom: 20px;
   border-radius:5px;
   text-align:center;
