--- a/_includes/resources-nav.html
+++ b/_includes/resources-nav.html
@@ -1,7 +1,7 @@
 <h3>Get Well Resources</h3>  
   
 {% for apage in site.pages %}
-    {% if apage.categories contains 'messages' %}
+    {% if apage.categories contains 'navbottom' %}
         {% if page.url != apage.url %}
             <ul class="bottom-nav">
                 <li><a href="{{ apage.url | prepend: site.baseurl }}">{{ apage.title }}</a></li>
