--- a/_includes/resources-nav.html
+++ b/_includes/resources-nav.html
@@ -1,15 +1,15 @@
 <h3>Get Well Resources</h3>  
- 
+ <p>
 {% for apage in site.pages %}
     {% if apage.categories contains 'navbottom' %}
         {% if page.url != apage.url %}
-  <p><ul class="bottom-nav">
+  <ul class="bottom-nav">
   <li><a href="{{ apage.url | prepend: site.baseurl }}">{{ apage.title }}</a></li>
-</ul></p>                                               
+</ul>                                             
         {% endif %}
     {% endif %}
 {% endfor %}     
-
+</p>
 
 
 
