--- a/_includes/resources-nav.html
+++ b/_includes/resources-nav.html
@@ -4,7 +4,7 @@
     {% if apage.categories contains 'navbottom' %}
         {% if page.url != apage.url %}
   <ul class="bottom-nav">
-  <li><a href="{{ apage.url | prepend: site.baseurl }}">{{ apage.title }}</a></li>
+  <li><a href="{{ apage.url | prepend: site.baseurl }}">{{ apage.title2 }}</a></li>
 </ul>                                             
         {% endif %}
     {% endif %}
