--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -589,6 +589,14 @@ display: inline;
   text-align:center;
 }
 
+.prayers {
+background: #ADD8E6;
+  padding: 20px 20px 20px 20px;
+  margin-bottom: 20px;
+  border-radius:5px;
+  text-align:center;
+}
+
 .logo {
 display:block;
 overflow:hidden;
