--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -590,7 +590,7 @@ display: inline;
 }
 
 .prayers {
-background: #ADD8E6;
+background: #ffffe0;
   padding: 20px 20px 20px 20px;
   margin-bottom: 20px;
   border-radius:5px;
