--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -560,27 +560,6 @@ font-size:10px;
     }
 }
 
-
-div.jumbo {
-background-color: #fff;
-width: 100%; 
-margin: 6px auto; padding: 2px;
-text-align: center;
-border-style:dotted;
-}
-
-.jumbo img {
-padding: 8px;
-display: inline;
-}
-
-@media (max-width: 680px) { 
-.jumbo img {
-    display: block;
-    margin: 5px auto;
-}
-}
-
 .poems {
   background: #ADD8E6;
   padding: 20px 20px 20px 20px;
@@ -618,4 +597,10 @@ max-width:80%
 .titlewrapper {
 height: 100px;
 border: solid 2px;
+}
+
+@media screen and (max-width: 680px) {
+    .titlewrapper {
+        border:none;
+    }
 }
