--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -602,5 +602,6 @@ border: solid 2px;
 @media screen and (max-width: 680px) {
     .titlewrapper {
         border:none;
+        height: auto;
     }
 }
