--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -554,6 +554,12 @@ font-size:10px;
     padding: 5px;  
 }
 
+.column3 {
+    float: left;
+    width: 30%;
+    padding: 5px;  
+}
+
 .row:after {
     content:"";
     display: table;
@@ -562,6 +568,13 @@ font-size:10px;
 
 @media screen and (max-width: 680px) {
     .column {
+        float: none;
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .column3 {
         float: none;
         width: auto;
     }
