--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -443,6 +443,13 @@ margin:auto;
 margin-bottom:20px;
 }
 
+.img3 {
+display:block;
+margin:auto;
+margin-bottom:20px;
+text-align:center;
+}
+
 h1,h2,h3{margin:0 0 .5em}
 
 h1{font-weight:bold;font-size:1.6em;line-height:1.4}
