--- a/_includes/get-well-footer.html
+++ b/_includes/get-well-footer.html
@@ -29,3 +29,5 @@
 </div>
 
 </footer>
+
+<div id="amzn-assoc-ad-a3a69f24-8c82-40cb-bd74-327bd046f3dd"></div><script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=a3a69f24-8c82-40cb-bd74-327bd046f3dd"></script>
