--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -685,5 +685,7 @@ display:block;
 
 .product-cta-box img {
 	margin-bottom:20px;
-    margin: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
