--- a/_includes/get-well-header.html
+++ b/_includes/get-well-header.html
@@ -1,6 +1,6 @@
 <body itemscope="" itemtype="https://schema.org/WebPage">
   
-  <a href="/" class="logo"><img src="/img/IMG_7208.PNG" alt="Get Well Messages"></a>
+  <a href="/" class="logo"><img src="/img/get-well-soon-messages-logo.png" alt="Get Well Messages"></a>
   
   <div class="wrapper">
 
