--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -654,7 +654,7 @@ display:block;
 .product-cta-button {
 	display: inline-block;
   border-radius: 4px;
-  background-color: #FFB6C1;
+  background-color: #f4511e;
   border: none;
   color: #FFFFFF;
   text-align: center;
