--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -29,8 +29,8 @@
   	{% if page.modified %}
   		<meta property="article:modified_time" content="{{page.modified}}" />
   	{% endif %}
-  	<meta property="article:author" content="http://facebook.com/aramzs" />
-    <meta property="article:publisher" content="https://www.facebook.com/aramzs" />
+  	<meta property="article:author" content="https://getwellmessages.net" />
+    <meta property="article:publisher" content="https://www.getwellmessages.net" />
   	<meta property="article:section" content="{{page.vertical}}" />
   	{% for tag in page.categories %}
   		<meta property="article:tag" content="{{tag}}" />
