--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -50,8 +50,8 @@
 	  	<meta property="og:image" content="{{page.image}}" />
 	  	<meta name="twitter:image" content="{{page.image}}" />
   	{% else %}
-  		<meta property="og:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
-  		<meta name="twitter:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
+  		<meta property="og:image" content="/img/get-well-messages.png" />
+  		<meta name="twitter:image" content="/img/get-well-messages.png" />
   	{% endif %}
 	
   {% else %}
