--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -50,17 +50,17 @@
 	  	<meta property="og:image" content="{{page.image}}" />
 	  	<meta name="twitter:image" content="{{page.image}}" />
   	{% else %}
-  		<meta property="og:image" content="/img/get-well-messages.png" />
-  		<meta name="twitter:image" content="/img/get-well-messages.png" />
+  		<meta property="og:image" content="/img/what-to-write-in-a-get-well-card.png" />
+  		<meta name="twitter:image" content="/img/what-to-write-in-a-get-well-card.png" />
   	{% endif %}
 	
   {% else %}
   	<!-- OG data for homepage -->
-  	<meta property="og:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
+  	<meta property="og:image" content="/img/what-to-write-in-a-get-well-card.png" />
   	<meta property="og:type" content="website" />
   	<meta name="twitter:card" content="summary" />
   	<meta name="twitter:title" content="{{site.title}}" />
-  	<meta name="twitter:image" content="https://41.media.tumblr.com/709bb3c371b9924add351bfe3386e946/tumblr_nxdq8uFdx81qzocgko1_1280.jpg" />
+  	<meta name="twitter:image" content="/img/what-to-write-in-a-get-well-card.png" />
   {% endif %}
    
   <!-- <script type="text/javascript" src="https://d31vxm9ubutrmw.cloudfront.net/static/js/2055.js"></script> -->
