--- a/_includes/adsense-top-responsive.html
+++ b/_includes/adsense-top-responsive.html
@@ -1,6 +1,6 @@
 <!-- Get Well Within Post Top - Responsive -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
      data-ad-client="ca-pub-2642906032724935"
      data-ad-slot="2078414688"
      data-ad-format="auto"
