--- a/_includes/adsense-middle1-responsive.html
+++ b/_includes/adsense-middle1-responsive.html
@@ -1,6 +1,6 @@
 <!-- Get Well Within Post Middle1 - Responsive -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; text-align:center;"
      data-ad-client="ca-pub-2642906032724935"
      data-ad-slot="6211185098"
      data-ad-format="auto"
