--- a/_includes/resources-nav.html
+++ b/_includes/resources-nav.html
@@ -1,3 +1,14 @@
+<!-- Get Well Within Post Bottom - Responsive -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2642906032724935"
+     data-ad-slot="6197924413"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <h3>Get Well Resources</h3>  
 
 <ul class="bottom-nav">
