--- a/_includes/get-well-head.html
+++ b/_includes/get-well-head.html
@@ -63,7 +63,7 @@
   	<meta name="twitter:image" content="/img/what-to-write-in-a-get-well-card.png" />
   {% endif %}
    
-{% if page.layout == 'page' OR page.layout == 'default' and site.google_adsense %}
+{% if page.layout == 'page' or page.layout == 'default' and site.google_adsense %}
   {% include google-adsense.html %}
   {% endif %}
 </head>
